<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:text="@string/add_new_employee"
        android:textColor="#5D4037"
        android:textSize="25sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/employee_name"/>

    <EditText
        android:id="@+id/NameInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        tools:ignore="SpeakableTextPresentCheck" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/employee_role"/>

    <EditText
        android:id="@+id/RoleInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        tools:ignore="SpeakableTextPresentCheck" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/employee_email_address"/>

    <EditText
        android:id="@+id/EmailInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        tools:ignore="SpeakableTextPresentCheck" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/employee_profile_url"/>

    <EditText
        android:id="@+id/ImageInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded"
        android:gravity="center"
        tools:ignore="SpeakableTextPresentCheck" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add_text"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:textSize="21sp"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:id="@+id/AddButton"/>

</LinearLayout>