<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    android:elevation="6dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/circleImage"
            android:text="@string/employee_name_text"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/roleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameText"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/circleImage"
            android:text="@string/employee_role"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/roleText"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/circleImage"
            android:text="@string/employee_email_address"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_below="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/EditButton"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/btn_edit_text" />

            <Button
                android:id="@+id/DeleteButton"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/btn_delete_text" />
        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>